@@ -85,6 +85,20 @@ name|util
 operator|.
 name|concurrent
 operator|.
+name|atomic
+operator|.
+name|AtomicBoolean
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
 name|locks
 operator|.
 name|ReentrantReadWriteLock
@@ -318,6 +332,18 @@ init|=
 operator|new
 name|ReentrantReadWriteLock
 argument_list|()
+decl_stmt|;
+comment|// Used to indicate that the scanner has closed (see HBASE-1107)
+specifier|private
+specifier|final
+name|AtomicBoolean
+name|closing
+init|=
+operator|new
+name|AtomicBoolean
+argument_list|(
+literal|false
+argument_list|)
 decl_stmt|;
 comment|/** Create an Scanner with a handle on the memcache and HStore files. */
 annotation|@
@@ -1552,6 +1578,15 @@ parameter_list|()
 block|{
 name|this
 operator|.
+name|closing
+operator|.
+name|set
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
 name|store
 operator|.
 name|deleteChangedReaderObserver
@@ -1611,6 +1646,18 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+if|if
+condition|(
+name|this
+operator|.
+name|closing
+operator|.
+name|get
+argument_list|()
+condition|)
+block|{
+return|return;
+block|}
 name|this
 operator|.
 name|lock
