@@ -127,6 +127,7 @@ Release 0.19.0 - Unreleased
    HBASE-1093  NPE in HStore#compact
    HBASE-1097  SequenceFile.Reader keeps around buffer whose size is that of
                largest item read -> results in lots of dead heap
+   HBASE-1107  NPE in HStoreScanner.updateReaders
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
